fix: add more contrast to offchip button on properties tab

--- a/src/renderer/components/properties-panel/PropertiesPanel.scss
+++ b/src/renderer/components/properties-panel/PropertiesPanel.scss
@@ -41,6 +41,7 @@
     gap: 20px;
     height: fit-content;
 
+    .op-element .offchip-button svg { color: $tt-medium-light-gray; }
 
     .node-element {
         width: $compute-node-width;
